--- a/students.html
+++ b/students.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>نظام OMA المتطور - إدارة الطلاب</title>
+<title>نظام OMA - إدارة الطلاب</title>
 <style>
 :root{
   --primary:#004aad;
@@ -13,113 +13,76 @@
 }
 *{box-sizing:border-box}
 body{
-  font-family: 'Cairo',sans-serif;
-  margin:0;background:linear-gradient(180deg,var(--bg),#fff);
+  font-family:'Cairo',sans-serif;margin:0;
+  background:linear-gradient(180deg,var(--bg),#fff);
   color:#102027;direction:rtl;visibility:hidden;
 }
 header{
   background:linear-gradient(90deg,var(--primary),#007bff);
-  color:#fff;padding:18px 16px;text-align:center;font-size:20px;font-weight:700;
-  box-shadow:0 3px 12px rgba(2,20,40,0.08);
+  color:#fff;padding:18px;text-align:center;font-size:20px;
   display:flex;justify-content:space-between;align-items:center;
 }
-header button{
-  background:#ff5555;color:white;border:none;padding:8px 14px;
-  border-radius:8px;cursor:pointer;font-weight:700;
-}
+header button{background:#ff5555;color:#fff;border:none;padding:8px 14px;border-radius:8px;cursor:pointer}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.controls{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:14px;align-items:center;}
-.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);flex:1}
+.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 4px 10px rgba(0,0,0,0.06);}
 .form-grid{display:flex;flex-wrap:wrap;gap:10px}
-input[type="text"], input[type="tel"], input[type="number"], select, textarea, .subject-field {
-  padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;
-}
-.two{width:calc(50% - 6px)}
-label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
-.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700}
-.btn.warn{background:#ff7043}
-.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12)}
-.btn.small{padding:6px 8px;font-size:13px;border-radius:6px}
-.add-subj{display:inline-block;margin-top:6px}
+input,select{padding:10px;border:1px solid #ccc;border-radius:8px;width:100%}
+label{display:block;margin-bottom:4px;font-size:13px}
+.btn{background:var(--primary);color:white;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:bold}
+.btn.small{padding:6px 8px;font-size:13px}
+.subject-item{border:1px solid #ccc;padding:8px;border-radius:8px;margin-bottom:8px}
+.subject-fields{display:flex;flex-wrap:wrap;gap:8px}
+.subject-fields>div{flex:1;min-width:120px}
 table{width:100%;border-collapse:collapse;margin-top:12px}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
+th,td{padding:8px;border-bottom:1px solid #eee;text-align:center}
 th{background:var(--primary);color:#fff}
-.actions button{margin:0 4px}
-.badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700}
-.modal { position:fixed; left:0; top:0; right:0; bottom:0; background:rgba(0,0,0,0.45); display:none; align-items:center; justify-content:center; z-index:9999;}
-.modal.open{display:flex}
-.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
-.flex{display:flex;gap:8px;align-items:center}
 </style>
 </head>
 <body>
 <header>
-  نظام OMA - إدارة الطلاب (متطور)
-  <button id="logoutBtn">🔓 تسجيل الخروج</button>
+  إدارة الطلاب
+  <button id="logoutBtn">🔓 خروج</button>
 </header>
 
 <div class="wrap">
-  <!-- نفس محتوى الصفحة السابق بدون حذف -->
-  <div class="controls">
-    <div style="flex:1" class="card">
-      <div>
-        <strong>أضف طالب جديد</strong>
-        <div style="font-size:13px;color:#546e7a">املأ الحقول ثم اضغط حفظ</div>
-      </div>
-      <form id="studentForm" style="margin-top:12px">
-        <div class="form-grid">
-          <div class="two">
-            <label>الاسم الكامل</label>
-            <input id="name" type="text" required />
-          </div>
-          <div class="two">
-            <label>رقم الموبايل</label>
-            <input id="phone" type="tel" required />
-          </div>
-          <div class="two">
-            <label>العنوان</label>
-            <input id="address" type="text" />
-          </div>
-          <div class="two">
-            <label>اسم المدرسة</label>
-            <input id="school" type="text" />
-          </div>
-          <div class="two">
-            <label>المرحلة الدراسية</label>
-            <input id="stage" type="text" />
-          </div>
-          <div class="two">
-            <label>المجموعة / الكروب</label>
-            <input id="group" type="text" placeholder="مثال: A أو 101" />
-          </div>
-          <div style="width:100%">
-            <label>المواد (أضف أكثر من مادة)</label>
-            <div id="subjectsContainer" style="display:flex;flex-wrap:wrap;gap:8px"></div>
-            <div style="margin-top:8px">
-              <button id="addSubjectBtn" type="button" class="btn ghost small add-subj">➕ إضافة مادة</button>
-            </div>
-          </div>
-          <div class="two">
-            <label>إجمالي الأقساط (اختياري)</label>
-            <input id="totalFees" type="number" min="0" />
-          </div>
-          <div class="two">
-            <label>ملاحظة / وصف الطالب</label>
-            <input id="note" type="text" />
-          </div>
-          <div style="width:100%;display:flex;gap:8px;justify-content:flex-end">
-            <button id="saveStudentBtn" class="btn" type="submit">✅ حفظ الطالب</button>
-            <button id="clearFormBtn" type="button" class="btn ghost">مسح الحقول</button>
-          </div>
+  <div class="card">
+    <h3>إضافة طالب</h3>
+    <form id="studentForm">
+      <div class="form-grid">
+        <div class="two">
+          <label>الاسم الكامل</label>
+          <input id="name" required>
         </div>
-      </form>
-    </div>
+        <div class="two">
+          <label>رقم الهاتف</label>
+          <input id="phone" type="tel" required>
+        </div>
+        <div class="two">
+          <label>المدرسة</label>
+          <input id="school">
+        </div>
+        <div class="two">
+          <label>المرحلة</label>
+          <input id="stage">
+        </div>
+        <div class="two">
+          <label>المجموعة</label>
+          <input id="group">
+        </div>
+      </div>
+
+      <h4>📘 المواد</h4>
+      <div id="subjectsContainer"></div>
+      <button id="addSubjectBtn" type="button" class="btn small">➕ إضافة مادة</button>
+
+      <div style="margin-top:10px;text-align:end">
+        <button class="btn" type="submit">💾 حفظ الطالب</button>
+      </div>
+    </form>
   </div>
 
-  <div class="card">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-      <div><strong>قائمة الطلاب</strong> <span id="totalCount" class="badge">0</span></div>
-    </div>
+  <div class="card" style="margin-top:20px">
+    <h3>قائمة الطلاب</h3>
     <table id="studentsTable">
       <thead>
         <tr>
@@ -127,36 +90,19 @@ th{background:var(--primary);color:#fff}
           <th>الهاتف</th>
           <th>المرحلة</th>
           <th>المجموعة</th>
-          <th>الأقساط</th>
-          <th>الخيارات</th>
+          <th>عدد المواد</th>
+          <th>خيارات</th>
         </tr>
       </thead>
       <tbody></tbody>
     </table>
   </div>
-
-  <div id="modal" class="modal" aria-hidden="true">
-    <div class="box">
-      <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
-        <strong id="modalTitle">تفاصيل الطالب</strong>
-        <button id="closeModal" class="btn ghost">إغلاق</button>
-      </div>
-      <div id="modalBody"></div>
-      <div style="text-align:center;margin-top:12px">
-        <button id="printStudentBtn" class="btn">🖨️ طباعة الاستمارة</button>
-      </div>
-    </div>
-  </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { 
-  getFirestore, collection, addDoc, getDocs, deleteDoc, doc 
-} from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { 
-  getAuth, onAuthStateChanged, signOut 
-} from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs, query } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
 // 🔹 إعداد Firebase
 const firebaseConfig = {
@@ -168,35 +114,137 @@ const firebaseConfig = {
   appId: "1:774171603105:web:91f2a5f44c4dde684080e0",
   measurementId: "G-QHPZG4JLB8"
 };
+
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 const auth = getAuth(app);
 
-// ✅ منع الوصول إلا بعد تسجيل الدخول
+// 🔒 التحقق من تسجيل الدخول
 onAuthStateChanged(auth, (user) => {
   if (!user) {
     window.location.href = "login.html";
   } else {
     document.body.style.visibility = "visible";
-    loadStudents(); // تحميل البيانات بعد التأكد من المستخدم
+    loadStudents();
   }
 });
 
-// 🔘 زر تسجيل الخروج
-document.getElementById("logoutBtn").addEventListener("click", async ()=>{
+// 🚪 تسجيل الخروج
+document.getElementById("logoutBtn").addEventListener("click", async () => {
   await signOut(auth);
-  alert("تم تسجيل الخروج بنجاح");
+  alert("تم تسجيل الخروج");
   window.location.href = "login.html";
 });
 
-// ====== بقية كود إدارة الطلاب كما هو ======
-const studentForm = document.getElementById("studentForm");
-const studentsTableBody = document.querySelector("#studentsTable tbody");
-const subjectsContainer = document.getElementById("subjectsContainer");
-const addSubjectBtn = document.getElementById("addSubjectBtn");
-let studentsData = [];
+// 🧾 جلب أسماء الأساتذة من قاعدة البيانات
+let teachersList = [];
+async function loadTeachers() {
+  const q = query(collection(db, "teachers"));
+  const snap = await getDocs(q);
+  teachersList = snap.docs.map(doc => doc.data().name);
+}
 
-// ... (نفس باقي الكود بدون تغيير)
+// ➕ إضافة مادة
+const addSubjectBtn = document.getElementById("addSubjectBtn");
+const subjectsContainer = document.getElementById("subjectsContainer");
+
+addSubjectBtn.addEventListener("click", async () => {
+  if (teachersList.length === 0) await loadTeachers();
+
+  const div = document.createElement("div");
+  div.classList.add("subject-item");
+  div.innerHTML = `
+    <div class="subject-fields">
+      <div>
+        <label>المادة</label>
+        <input type="text" class="subject-name" required>
+      </div>
+      <div>
+        <label>الأستاذ</label>
+        <select class="subject-teacher">
+          ${teachersList.map(t => `<option value="${t}">${t}</option>`).join("")}
+        </select>
+      </div>
+      <div>
+        <label>إجمالي القسط</label>
+        <input type="number" min="0" class="subject-total" value="0">
+      </div>
+      <div>
+        <label>المدفوع</label>
+        <input type="number" min="0" class="subject-paid" value="0">
+      </div>
+      <div>
+        <label>المتبقي</label>
+        <input type="number" min="0" class="subject-remaining" value="0" readonly>
+      </div>
+    </div>
+  `;
+
+  const totalInput = div.querySelector(".subject-total");
+  const paidInput = div.querySelector(".subject-paid");
+  const remainingInput = div.querySelector(".subject-remaining");
+
+  function updateRemaining() {
+    const total = parseFloat(totalInput.value) || 0;
+    const paid = parseFloat(paidInput.value) || 0;
+    remainingInput.value = total - paid;
+  }
+
+  totalInput.addEventListener("input", updateRemaining);
+  paidInput.addEventListener("input", updateRemaining);
+
+  subjectsContainer.appendChild(div);
+});
+
+// 💾 حفظ الطالب
+const form = document.getElementById("studentForm");
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const name = document.getElementById("name").value;
+  const phone = document.getElementById("phone").value;
+  const school = document.getElementById("school").value;
+  const stage = document.getElementById("stage").value;
+  const group = document.getElementById("group").value;
+
+  const subjects = Array.from(subjectsContainer.children).map(div => ({
+    name: div.querySelector(".subject-name").value,
+    teacher: div.querySelector(".subject-teacher").value,
+    total: parseFloat(div.querySelector(".subject-total").value) || 0,
+    paid: parseFloat(div.querySelector(".subject-paid").value) || 0,
+    remaining: parseFloat(div.querySelector(".subject-remaining").value) || 0
+  }));
+
+  await addDoc(collection(db, "students"), {
+    name, phone, school, stage, group, subjects
+  });
+
+  alert("✅ تم حفظ الطالب بنجاح");
+  form.reset();
+  subjectsContainer.innerHTML = "";
+  loadStudents();
+});
+
+// 📋 عرض الطلاب
+async function loadStudents() {
+  const q = query(collection(db, "students"));
+  const snap = await getDocs(q);
+  const tbody = document.querySelector("#studentsTable tbody");
+  tbody.innerHTML = "";
+  snap.forEach(docSnap => {
+    const s = docSnap.data();
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${s.name}</td>
+      <td>${s.phone}</td>
+      <td>${s.stage || "-"}</td>
+      <td>${s.group || "-"}</td>
+      <td>${s.subjects ? s.subjects.length : 0}</td>
+      <td><button class="btn small">🖨️ طباعة</button></td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
 </script>
 </body>
 </html>
