--- a/settings.html
+++ b/settings.html
@@ -2,262 +2,175 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - الإعدادات المركزية</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>الإعدادات - نظام OMA</title>
 <style>
-body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;visibility:hidden;}
-header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
-.wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
-input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
-label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
-.btn.warn{background:#ff7043;}
-table{width:100%;border-collapse:collapse;margin-top:12px;}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
-th{background:#004aad;color:#fff;}
-.filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:12px;}
-.filters select{flex:1;}
-@media print{
-  body{background:white;}
-  header,.btn,.modal{display:none !important;}
+:root{
+  --primary:#004aad;
+  --accent:#ffcc33;
+  --bg:#f5f9ff;
+  --card:#fff;
+}
+*{box-sizing:border-box}
+body{
+  font-family:'Cairo',sans-serif;
+  background:linear-gradient(180deg,var(--bg),#fff);
+  margin:0;direction:rtl;
+  visibility:hidden;
+}
+header{
+  background:linear-gradient(90deg,var(--primary),#007bff);
+  color:white;
+  padding:18px;
+  text-align:center;
+  font-size:20px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+header button{
+  background:#ff5555;
+  color:white;
+  border:none;
+  padding:8px 14px;
+  border-radius:8px;
+  cursor:pointer;
+}
+.wrap{max-width:800px;margin:30px auto;padding:16px}
+.card{
+  background:var(--card);
+  border-radius:10px;
+  padding:16px;
+  box-shadow:0 4px 10px rgba(0,0,0,0.06);
+}
+label{display:block;margin-bottom:4px;font-size:13px}
+input,textarea{
+  width:100%;
+  padding:10px;
+  margin-bottom:12px;
+  border:1px solid #ccc;
+  border-radius:8px;
+  font-size:15px;
+}
+textarea{resize:none;height:70px}
+.btn{
+  background:var(--primary);
+  color:white;
+  padding:10px 16px;
+  border:none;
+  border-radius:8px;
+  cursor:pointer;
+  font-weight:bold;
 }
 </style>
 </head>
 <body>
-<header>نظام OMA - الإعدادات المركزية</header>
+<header>
+  الإعدادات العامة
+  <button id="logoutBtn">🔓 خروج</button>
+</header>
+
 <div class="wrap">
+  <div class="card">
+    <h3>⚙️ إعدادات النظام</h3>
+    <form id="settingsForm">
+      <label>اسم المعهد</label>
+      <input id="instituteName" required>
 
-<!-- إعدادات النسب -->
-<div class="card">
-  <strong>إعدادات النسب</strong>
-  <form id="settingsForm">
-    <label>نسبة المعهد %</label>
-    <input id="instituteShare" type="number" min="0" max="100">
-    <label>نسبة الأستاذ %</label>
-    <input id="teacherShare" type="number" min="0" max="100">
-    <button type="submit" class="btn">✅ حفظ الإعدادات</button>
-  </form>
-</div>
+      <label>الشعار (رابط صورة)</label>
+      <input id="logoUrl">
 
-<!-- إدارة المستخدمين -->
-<div class="card">
-  <strong>إدارة دخول المستخدمين</strong>
-  <form id="userForm">
-    <label>نوع الحساب</label>
-    <select id="userType">
-      <option value="student">طالب</option>
-      <option value="teacher">أستاذ</option>
-      <option value="admin">مدير/محاسب</option>
-    </select>
-    <label>الاسم الكامل</label>
-    <input id="userName" type="text" required>
-    <label>البريد الإلكتروني</label>
-    <input id="userEmail" type="email" required>
-    <label>كلمة المرور</label>
-    <input id="userPassword" type="password" required>
-    <button type="submit" class="btn">✅ إضافة المستخدم</button>
-  </form>
-</div>
+      <label>رقم الهاتف</label>
+      <input id="phone">
 
-<!-- عرض الطلاب -->
-<div class="card">
-  <strong>قائمة الطلاب</strong>
-  <div class="filters">
-    <select id="studentFilterGroup"><option value="">فلترة حسب الكروب</option></select>
-    <select id="studentFilterStage"><option value="">فلترة حسب المرحلة</option></select>
+      <label>العنوان</label>
+      <textarea id="address"></textarea>
+
+      <label>رابط الفيسبوك</label>
+      <input id="facebook">
+
+      <label>رابط إنستغرام</label>
+      <input id="instagram">
+
+      <label>سنة التأسيس</label>
+      <input id="founded">
+
+      <div style="text-align:end">
+        <button type="submit" class="btn">💾 حفظ الإعدادات</button>
+      </div>
+    </form>
   </div>
-  <table id="studentsTable">
-    <thead>
-      <tr>
-        <th>الاسم</th>
-        <th>الهاتف</th>
-        <th>المرحلة</th>
-        <th>المجموعة</th>
-        <th>الأقساط</th>
-        <th>خيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
-<!-- عرض الأساتذة -->
-<div class="card">
-  <strong>قائمة الأساتذة</strong>
-  <div class="filters">
-    <select id="teacherFilter"><option value="">فلترة حسب الأستاذ</option></select>
-  </div>
-  <table id="teachersTable">
-    <thead>
-      <tr>
-        <th>الاسم</th>
-        <th>الهاتف</th>
-        <th>المواد</th>
-        <th>المراحل</th>
-        <th>الكروبات</th>
-        <th>خيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
-<!-- عرض الحصص -->
-<div class="card">
-  <strong>قائمة الحصص</strong>
-  <div class="filters">
-    <select id="classFilterTeacher"><option value="">فلترة حسب الأستاذ</option></select>
-    <select id="classFilterGroup"><option value="">فلترة حسب الكروب</option></select>
-  </div>
-  <table id="classesTable">
-    <thead>
-      <tr>
-        <th>المادة</th>
-        <th>الأستاذ</th>
-        <th>الكروب</th>
-        <th>اليوم</th>
-        <th>الوقت</th>
-        <th>خيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, getDocs, deleteDoc, doc, addDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
+// إعداد Firebase
 const firebaseConfig = {
-  apiKey: "API_KEY_HERE",
-  authDomain: "PROJECT_ID.firebaseapp.com",
-  projectId: "PROJECT_ID",
-  storageBucket: "PROJECT_ID.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
+  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+  authDomain: "oma2-d36fa.firebaseapp.com",
+  projectId: "oma2-d36fa",
+  storageBucket: "oma2-d36fa.firebasestorage.app",
+  messagingSenderId: "774171603105",
+  appId: "1:774171603105:web:91f2a5f44c4dde684080e0",
+  measurementId: "G-QHPZG4JLB8"
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 const auth = getAuth(app);
 
-// حماية الصفحة وعرضها بعد التحقق
-onAuthStateChanged(auth,user=>{
-  if(!user) window.location.href="login.html";
-  else document.body.style.visibility="visible";
+// تحقق من تسجيل الدخول
+onAuthStateChanged(auth, async (user)=>{
+  if(!user){
+    window.location.href="login.html";
+  } else {
+    document.body.style.visibility="visible";
+    await loadSettings();
+  }
 });
 
-// عناصر الطلاب
-const studentsTableBody=document.querySelector("#studentsTable tbody");
-const studentFilterGroup=document.getElementById("studentFilterGroup");
-const studentFilterStage=document.getElementById("studentFilterStage");
+// زر الخروج
+document.getElementById("logoutBtn").addEventListener("click", async ()=>{
+  await signOut(auth);
+  window.location.href="login.html";
+});
 
-// عناصر الأساتذة
-const teachersTableBody=document.querySelector("#teachersTable tbody");
-const teacherFilter=document.getElementById("teacherFilter");
-
-// عناصر الحصص
-const classesTableBody=document.querySelector("#classesTable tbody");
-const classFilterTeacher=document.getElementById("classFilterTeacher");
-const classFilterGroup=document.getElementById("classFilterGroup");
-
-// تحميل الطلاب
-async function loadStudents(){
-  const snapshot=await getDocs(collection(db,"students"));
-  studentsTableBody.innerHTML="";
-  let groupsSet=new Set(), stagesSet=new Set();
-  snapshot.forEach(docSnap=>{
-    const s={id:docSnap.id,...docSnap.data()};
-    groupsSet.add(s.group); stagesSet.add(s.stage);
-    const tr=document.createElement("tr");
-    tr.innerHTML=`
-      <td>${s.name}</td>
-      <td>${s.phone}</td>
-      <td>${s.stage}</td>
-      <td>${s.group}</td>
-      <td>${s.subjects.map(sub=>"["+sub.name+"-"+sub.fee+"]").join(", ")}</td>
-      <td><button class="btn warn" onclick="deleteStudent('${s.id}')">🗑️ حذف</button></td>
-    `;
-    studentsTableBody.appendChild(tr);
-  });
-  studentFilterGroup.innerHTML="<option value=''>فلترة حسب الكروب</option>"; groupsSet.forEach(g=>{studentFilterGroup.innerHTML+=`<option value='${g}'>${g}</option>`});
-  studentFilterStage.innerHTML="<option value=''>فلترة حسب المرحلة</option>"; stagesSet.forEach(st=>{studentFilterStage.innerHTML+=`<option value='${st}'>${st}</option>`});
-}
-loadStudents();
-
-// حذف طالب
-window.deleteStudent=async(id)=>{
-  if(confirm("هل تريد حذف الطالب؟")){
-    await deleteDoc(doc(db,"students",id));
-    loadStudents();
+// تحميل الإعدادات من Firestore
+async function loadSettings(){
+  const ref = doc(db,"config","settings");
+  const snap = await getDoc(ref);
+  if(snap.exists()){
+    const data = snap.data();
+    document.getElementById("instituteName").value = data.instituteName || "";
+    document.getElementById("logoUrl").value = data.logoUrl || "";
+    document.getElementById("phone").value = data.phone || "";
+    document.getElementById("address").value = data.address || "";
+    document.getElementById("facebook").value = data.facebook || "";
+    document.getElementById("instagram").value = data.instagram || "";
+    document.getElementById("founded").value = data.founded || "";
   }
 }
 
-// تحميل الأساتذة
-async function loadTeachers(){
-  const snapshot=await getDocs(collection(db,"teachers"));
-  teachersTableBody.innerHTML=""; teacherFilter.innerHTML="<option value=''>فلترة حسب الأستاذ</option>";
-  snapshot.forEach(docSnap=>{
-    const t={id:docSnap.id,...docSnap.data()};
-    const tr=document.createElement("tr");
-    tr.innerHTML=`
-      <td>${t.name}</td>
-      <td>${t.phone}</td>
-      <td>${t.subjects.map(s=>s.name).join(", ")}</td>
-      <td>${t.stages}</td>
-      <td>${t.groups}</td>
-      <td><button class="btn warn" onclick="deleteTeacher('${t.id}')">🗑️ حذف</button></td>
-    `;
-    teachersTableBody.appendChild(tr);
-    teacherFilter.innerHTML+=`<option value='${t.name}'>${t.name}</option>`;
-  });
-}
-loadTeachers();
+// حفظ الإعدادات
+document.getElementById("settingsForm").addEventListener("submit", async(e)=>{
+  e.preventDefault();
 
-// حذف أستاذ
-window.deleteTeacher=async(id)=>{
-  if(confirm("هل تريد حذف الأستاذ؟")){
-    await deleteDoc(doc(db,"teachers",id));
-    loadTeachers();
-  }
-}
+  const data = {
+    instituteName: document.getElementById("instituteName").value,
+    logoUrl: document.getElementById("logoUrl").value,
+    phone: document.getElementById("phone").value,
+    address: document.getElementById("address").value,
+    facebook: document.getElementById("facebook").value,
+    instagram: document.getElementById("instagram").value,
+    founded: document.getElementById("founded").value
+  };
 
-// تحميل الحصص
-async function loadClasses(){
-  const snapshot=await getDocs(collection(db,"classes"));
-  classesTableBody.innerHTML="";
-  classFilterTeacher.innerHTML="<option value=''>فلترة حسب الأستاذ</option>";
-  classFilterGroup.innerHTML="<option value=''>فلترة حسب الكروب</option>";
-  snapshot.forEach(docSnap=>{
-    const c={id:docSnap.id,...docSnap.data()};
-    const tr=document.createElement("tr");
-    const teacherName=c.teacherId || "غير معروف";
-    tr.innerHTML=`
-      <td>${c.subject}</td>
-      <td>${teacherName}</td>
-      <td>${c.group}</td>
-      <td>${c.day}</td>
-      <td>${c.time}</td>
-      <td><button class="btn warn" onclick="deleteClass('${c.id}')">🗑️ حذف</button></td>
-    `;
-    classesTableBody.appendChild(tr);
-    classFilterTeacher.innerHTML+=`<option value='${teacherName}'>${teacherName}</option>`;
-    classFilterGroup.innerHTML+=`<option value='${c.group}'>${c.group}</option>`;
-  });
-}
-loadClasses();
-
-// حذف حصة
-window.deleteClass=async(id)=>{
-  if(confirm("هل تريد حذف الحصة؟")){
-    await deleteDoc(doc(db,"classes",id));
-    loadClasses();
-  }
-}
+  await setDoc(doc(db,"config","settings"), data);
+  alert("✅ تم حفظ الإعدادات بنجاح");
+});
 </script>
 </body>
 </html>
