--- a/login.html
+++ b/login.html
@@ -81,13 +81,11 @@ footer {
   <footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
 
   <script type="module">
-  // ✅ تهيئة Firebase
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
   import { 
     getAuth, 
-    signInWithEmailAndPassword, 
-    onAuthStateChanged, 
-    signOut 
+    signInWithEmailAndPassword,
+    onAuthStateChanged
   } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
   const firebaseConfig = {
@@ -108,14 +106,15 @@ footer {
   const loginBtn = document.getElementById("loginBtn");
   const errorMsg = document.getElementById("errorMsg");
 
-  // 🧹 مسح أي جلسة تسجيل دخول قديمة عند فتح صفحة تسجيل الدخول
-  signOut(auth).then(() => {
-    console.log("✅ تم تسجيل الخروج التلقائي عند فتح صفحة تسجيل الدخول");
-  }).catch((err) => {
-    console.warn("⚠️ خطأ أثناء تسجيل الخروج:", err);
+  // ✅ تحقق إذا المستخدم مسجل دخول مسبقاً
+  onAuthStateChanged(auth, (user) => {
+    if (user) {
+      console.log("🔹 المستخدم مازال مسجلاً الدخول:", user.email);
+      window.location.href = "dashboard.html";
+    }
   });
 
-  // 🎯 عند الضغط على زر الدخول
+  // 🎯 تسجيل الدخول
   loginBtn.addEventListener("click", async () => {
     const email = emailInput.value.trim();
     const password = passwordInput.value.trim();
@@ -130,15 +129,14 @@ footer {
     loginBtn.textContent = "جاري التحقق...";
 
     try {
-      const userCredential = await signInWithEmailAndPassword(auth, email, password);
-      console.log("✅ تسجيل دخول:", userCredential.user.email);
+      await signInWithEmailAndPassword(auth, email, password);
+      console.log("✅ تم تسجيل الدخول بنجاح");
       errorMsg.style.color = "green";
       errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
       setTimeout(() => {
         window.location.href = "dashboard.html";
-      }, 1200);
+      }, 1000);
     } catch (error) {
-      console.error(error);
       loginBtn.disabled = false;
       loginBtn.textContent = "دخول";
       errorMsg.style.color = "red";
@@ -151,6 +149,6 @@ footer {
       }
     }
   });
-</script>
+  </script>
 </body>
 </html>
